--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -31,3 +31,22 @@ button {
     width: 100px;
     height: 100px;
 }
+
+.project-header{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+h4{
+    font-size: 35px;
+}
+h1{
+    font-size: 40px;
+}
+body{
+    background-color: rgb(215, 240, 255);
+}
+
+#detail-1, #detail-2, #detail-3, #detail-4{
+    visibility: hidden;
+}
