--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -9,44 +9,48 @@
 }
 
 ul {
-    padding: 0;
-    list-style-type: none;
+  padding: 0;
+  list-style-type: none;
 }
 
 button {
-    border: 1px solid white;
-    border-radius: 12px;
-    padding: 16px;
-    background-color: green;
-    color: white;
-    font-weight: 20dp;
+  border: 1px solid white;
+  border-radius: 12px;
+  padding: 16px;
+  background-color: green;
+  color: white;
+  font-weight: 20px;
 }
 
-
 #randomimg {
-    width: 650px;
+  width: 650px;
 }
 
 .logo {
-    width:  50px;
-    height: 50px;
+  width: 50px;
+  height: 50px;
 }
 
-.project-header{
-    font-size: 30px;
-    font-weight: bold;
+.project-header {
+  font-size: 30px;
+  font-weight: bold;
 }
 
-h4{
-    font-size: 35px;
-}
-h1{
-    font-size: 40px;
-}
-body{
-    background-color: rgb(215, 240, 255);
+h4 {
+  font-size: 35px;
 }
 
-#detail-1, #detail-2, #detail-3, #detail-4{
-    visibility: hidden;
+h1 {
+  font-size: 40px;
+}
+
+body {
+  background-color: rgb(215, 240, 255);
+}
+
+#detail-1,
+#detail-2,
+#detail-3,
+#detail-4 {
+  visibility: hidden;
 }
